compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_constructor_arg_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type IntWrapper { IntWrapper(innerInt: Int) }"
---
error: Invalid name
  ┌─ /src/one/two.gleam:1:30
  │
1 │ type IntWrapper { IntWrapper(innerInt: Int) }
  │                              ^^^^^^^^^^^^^ This is not a valid name

Hint: Names start with a lowercase letter and contain a-z, 0-9, or _.
Try: inner_int
